--- a/C4-面向对象-飞机大战.html
+++ b/C4-面向对象-飞机大战.html
@@ -24,6 +24,7 @@ var bj={}
 		})
 	}
 }
+//背景启动 gamestart
 bj.start()
 
 function Me() {
@@ -64,40 +65,53 @@ function Fire() {
 	
 	this.ele=$('<div></div>')
 	this.ele.addClass('dadada')
-	this.ele.appendTo($('.me'))
+	this.ele.appendTo($('#box'))
 	
 }
 Fire.prototype.she=function(){
 	var selfer=this;
+	var left=parseFloat($('.me').css('left'));//console.log(left)
+	var top=parseFloat($('.me').css('top'));//console.log(left)
+	this.ele.css({'left':left,'top':top});//console.log(left)
 	this.ele.animate({top:-$(document).height()},2000,function(){
 		selfer.ele.remove()
 	})
+	
 }
 		
 
 
-
+//发射子弹
 setInterval(function(){
 	new Fire().she();
 },100)
 
+//.she()
 //左右按键
+
 Me.prototype.move=function(){
 	
 	var self=this.ele
 	$(document).keydown(function(e){
-		
+		var Time;
+		var Timer;
 		var i=e.keyCode;//console.log(i)
 //		var j=parseFloat(self.css('left')) 
 //		console.log(parseFloat(self.ele.css('left')))
 			if(i==37){
+				
+//				var Timer;
+				clearInterval(Time)
+				zuo(self);
 //				$(document).off('keydown keyup')
 //				self.ele.remove(animate)
 //				self.ele.animate({left:0},5000)
-//			Time();
+//				Time();
 			}
 			if(i==39){
-				var Time;
+				
+//				var Time;
+				clearInterval(Timer)
 				you(self);
 //				self.ele.css({left:x})
 //				$(document).off('keydown keyup')
@@ -107,20 +121,32 @@ Me.prototype.move=function(){
 			$(document).keyup(function(){
 //				var x=parseFloat(self.ele.css('left')) ;
 //				self.ele.css({left:x})
-				clearInterval(Time)
+//				clearInterval(Time)
+				self.off('keydown keyup')
 			})
 }
+//创建自己的飞机
 var plane=new Me()
 plane.fly();
 plane.move()
 //
 
 		function you(self){
+			
 			var j=parseFloat(self.css('left')) 
 			console.log(j)
 			Time=setInterval(function(){
 				j++;
 				self.css({'left':j})
+			},30)
+		}
+		function zuo(self){
+			
+			var k=parseFloat(self.css('left')) 
+//			console.log(j)
+			Timer=setInterval(function(){
+				k--;
+				self.css({'left':k})
 			},30)
 		}
 </script>
