--- a/C4-面向对象-飞机大战.html
+++ b/C4-面向对象-飞机大战.html
@@ -17,6 +17,8 @@
 <script type="text/javascript" src="js/enemy2.js"></script>
 <script type="text/javascript" src="js/enemy3.js"></script>
 <script type="text/javascript" src="js/common.js"></script>
+<script src="js/Touch.js"></script>
+<script src="js/Score.js"></script>
 
 <script type="text/javascript">
 
@@ -30,7 +32,7 @@ game.fire()
 //创建敌机
 game.enemy()
 
-console.log(objj)
+tE.touchListen()
 
 //发射子弹
 //setInterval(function(){
