--- a/C4-面向对象-飞机大战.html
+++ b/C4-面向对象-飞机大战.html
@@ -12,6 +12,7 @@
 </html>
 <script type="text/javascript" src="js/jquery-1.11.1.js"></script>
 <script type="text/javascript" src="js/Engine.js"></script>
+<script type="text/javascript" src="js/myplane.js"></script>
 <script type="text/javascript" src="js/enemy.js"></script>
 <script type="text/javascript" src="js/enemy1.js"></script>
 <script type="text/javascript" src="js/enemy2.js"></script>
